--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typescript": "^4.7.4"
   },
   "dependencies": {
-    "discord.js": "^13.8.1"
+    "discord.js": "^13.8.1",
+    "dotenv": "^16.0.1"
   }
 }
