--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
+    "lint": "npx eslint . --ext ts",
     "debug": "ts-node ./src/index.ts",
     "start": "node ./lib/index.js"
   },
@@ -22,6 +23,13 @@
   "homepage": "https://github.com/hayabusabusa/yrzy-discord-bot#readme",
   "devDependencies": {
     "@types/node": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.3",
+    "@typescript-eslint/parser": "^5.30.3",
+    "eslint": "^8.18.0",
+    "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-n": "^15.2.3",
+    "eslint-plugin-promise": "^6.0.0",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4"
   },
