--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "lint": "npx eslint . --ext ts",
     "debug": "ts-node ./src/index.ts",
-    "start": "node ./lib/index.js"
+    "start": "npm run build && node ./lib/index.js"
   },
   "repository": {
     "type": "git",
